# agentic-ai

02_openrouter/openrouter-agent-demo/: .env  readme.md  test.py
03_litellm_openai_agent/01_litellm/myproject/: pyproject.toml
03_litellm_openai_agent/01_litellm/myproject/src/: hello.py
03_litellm_openai_agent/02_uv_litellm_chainlite/chatbot/: pyproject.toml
03_litellm_openai_agent/02_uv_litellm_chainlite/chatbot/src/: chat_history.json  main.py
