[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rafiha Siddiqui", email = "rafihasiddiqui@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.71.1",
]

[project.scripts]
myproject = "myproject:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
